package edu.fiuba.algo3.modelo;

import java.util.ArrayList;

public class RazaZerg extends Raza{


}
